--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-#VSCode
-.vscode/*
-.vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
-.vscode/extensions.json
-
 # Distribution / packaging
 .Python
 build/
@@ -109,3 +102,71 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Java
+*.class
+.mtj.tmp/
+*.jar
+*.war
+*.ear
+hs_err_pid*
+
+# Log file
+*.log
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Eclipse
+.classpath
+.project
+/bin/
+
+# Library
+.settings/
+.sts4-cache/
+
+# BlueJ files
+*.ctxt
+
+#Gradle
+*.gradle/
+*gradle/
+build.gradle
+gradlew
+gradlew.bat
+
+#IntelliJ IDEA
+*.iml
+.idea/
+*.ipr
+*.iws
+out/
+.idea_modules/
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+#VSCode
+*.vscode/
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
